--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
 
     <!-- text colors -->
     <color name="colorLabelGreyDark">#686868</color>
-
+    <color name="colorMediumGrey">#FF585858</color>
 
     <!-- buttons colors -->
 
