--- a/app/src/main/res/layout/activity_main_new.xml
+++ b/app/src/main/res/layout/activity_main_new.xml
@@ -8,4 +8,7 @@
     app:ms_backButtonText="PREV"
     app:ms_nextButtonText="NEXT"
     app:ms_completeButtonText="SUBMIT"
-    app:ms_stepperType="tabs" />
+    app:ms_stepperType="tabs"
+    app:ms_activeStepColor="@color/colorGreenDark"
+    app:ms_nextButtonColor="@color/colorOrangeDark"
+    app:ms_completeButtonColor="@color/colorOrangeDark"/>
