--- a/app/src/main/res/values/developer_storage.xml
+++ b/app/src/main/res/values/developer_storage.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_maps_key">AIzaSyAw8DWXL8Ldwjinzlf4wPRghqNIRwcEF5I</string>
+    <string name="google_maps_key">put-your-key-here</string>
 </resources>
